# ogl

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
include/: buffer.hpp  camera.hpp  framework.hpp  info.hpp  input.hpp  render.hpp  shader.hpp  texture.hpp  vertices.h  voxel.hpp  window.hpp
include/voxel/: grid.hpp  ray.hpp  svo.hpp  tracing.hpp
shaders/: simple.frag  simple.vert  svo_march.comp.glsl
src/: buffer.cpp  main.cpp  render.cpp
src/voxel/: tracing.cpp
